feat(options): add options page for AI configuration
Introduce a new options page (`options.html`) to allow users to configure AI provider, model, API key, and base URL. The configuration is saved to `chrome.storage.local` and retrieved in `background.js` for analyzing LinkedIn posts. This enhances user flexibility by enabling customization of AI settings without modifying the code directly.

--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,13 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "Analyze LinkedIn Posts"
+    "default_title": "Analyze LinkedIn Posts",
+    "default_popup": "options.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
   },
   "icons": {
     "16": "icon16.png",
